Closed Bug 1004295 Opened 10 years ago Closed 10 years ago

Hard abort when trying to unload modules with shared loader global

Categories

(Core :: XPConnect, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: bholley, Assigned: bholley)

Details

Attachments

(1 file)

See the second part of bug 980537 comment 28. We should fix this at some point, but in the mean time we want to make sure that nobody does this on accident.
Attachment #8415663 - Flags: review?(continuation) → review+
https://hg.mozilla.org/mozilla-central/rev/9f4a5b6678dd
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: