Bug 1004295 - Hard abort if we try to unload modules when loader global reuse is enabled. r=mccr8